syntax = "proto3";
package podc.types;

option go_package = "github.com/reapchain/reapchain-core/proto/podc/types";

import "gogoproto/gogo.proto";
import "podc/types/types.proto";
import "podc/types/evidence.proto";

message Block {
  Header                        header      = 1 [(gogoproto.nullable) = false];
  Data                          data        = 2 [(gogoproto.nullable) = false];
  podc.types.EvidenceList evidence    = 3 [(gogoproto.nullable) = false];
  Commit                        last_commit = 4;
}
